<resources>
    <string name="what_do_you_want_to_share">What do you want to share?</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s.</string>
    <string name="the_audio_file">The audio file</string>
    <string name="unplayable_file">Couldn\'t play this song.</string>
    <string name="error_share_file">There was an error sharing the file.</string>
    <string name="error_version">Please update your server to the latest version.</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_grant">Grant</string>
    <string name="action_about">About</string>
    <string name="action_login">Login</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play">Play</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_close">Close</string>
    <string name="action_add_to_queue">Add to queue</string>
    <string name="action_remove_from_queue">Remove from queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_details">Details</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="action_shuffle_album">Shuffle album</string>
    <string name="action_shuffle_artist">Shuffle artist</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_clear_queue">Clear queue</string>
    <string name="action_save_queue">Save queue</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_set">Set</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="favorites">Favorites</string>
    <string name="no_playlists">No playlists</string>
    <string name="no_albums">No albums</string>
    <string name="no_songs">No songs</string>
    <string name="no_artists">No artists</string>
    <string name="no_genres">No genres</string>
    <string name="no_results">No results</string>
    <string name="empty">Empty</string>
    <string name="name">Name</string>
    <string name="song">Song</string>
    <string name="album">Album</string>
    <string name="label_details">Details</string>
    <string name="label_file_path">Path</string>
    <string name="label_file_name">Name</string>
    <string name="label_file_size">Size</string>
    <string name="label_file_format">Format</string>
    <string name="label_track_length">Length</string>
    <string name="label_sample_rate">Sample Rate</string>
    <string name="label_bit_rate">Bit Rate</string>
    <string name="label_bit_depth">Bit Depth</string>
    <string name="label_channels">Channels</string>
    <string name="battery_optimizations_title">Battery Optimizations</string>
    <string name="battery_optimizations_message">Please disable battery optimizations for media playback while the screen is off.</string>
    <string name="added_title_to_queue">"Added 1 title to the queue."</string>
    <string name="added_x_titles_to_queue">Added %1$d titles to the queue.</string>
    <string name="downloading_x_songs">Downloading %1$d songs.</string>
    <string name="delete_playlist_x"><![CDATA[Delete the playlist <b>%1$s</b>?]]></string>
    <string name="delete_x_playlists"><![CDATA[Delete <b>%1$d</b> playlists?]]></string>
    <string name="remove_song_x_from_playlist"><![CDATA[Remove the song <b>%1$s</b> from the playlist?]]></string>
    <string name="remove_x_songs_from_playlist"><![CDATA[Remove <b>%1$d</b> songs from the playlist?]]></string>
    <string name="remove_song_from_playlist_title">Remove song from playlist</string>
    <string name="remove_songs_from_playlist_title">Remove songs from playlist</string>
    <string name="rename_playlist_title">Rename playlist</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="select_all_title">Select all</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_sort_method">Sort method</string>
    <string name="colored_footers">Colored footers</string>
    <string name="light_theme_name">Light</string>
    <string name="dark_theme_name">Dark</string>
    <string name="black_theme_name">Black</string>
    <string name="card">Card</string>
    <string name="flat">Flat</string>
    <string name="pref_header_colors">Colors</string>
    <string name="pref_header_now_playing_screen">Now Playing</string>
    <string name="pref_header_audio">Audio</string>
    <string name="pref_header_cache">Cache</string>
    <string name="pref_header_library">Library</string>
    <string name="pref_header_lock_screen">Lock Screen</string>
    <string name="pref_header_notification">Notification</string>
    <string name="pref_header_overlay">Overlay</string>
    <string name="pref_title_direct_play_codecs">Direct Play Codecs</string>
    <string name="pref_title_categories">Categories</string>
    <string name="pref_title_primary_color">Primary Color</string>
    <string name="pref_title_accent_color">Accent Color</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_title_now_playing_appearance">Appearance</string>
    <string name="pref_title_colored_shortcuts">Colored Shortcuts</string>
    <string name="pref_title_show_album_art">Show Album Cover</string>
    <string name="pref_title_blur_album_art">Blur Album Cover</string>
    <string name="pref_title_transcode_codec">Transcode Codec</string>
    <string name="pref_title_maximum_bitrate">Maximum Bitrate</string>
    <string name="pref_title_classic_notification">Classic Design</string>
    <string name="pref_title_colored_notification">Colored Notification</string>
    <string name="pref_title_remember_tab">Remember Tab</string>
    <string name="pref_title_remember_shuffle">Remember Shuffle</string>
    <string name="pref_title_remember_queue">Remember Queue</string>
    <string name="pref_title_page_size">Page Size</string>
    <string name="pref_title_download_location">Download Location</string>
    <string name="pref_title_image_cache_size">Images</string>
    <string name="pref_title_media_cache_size">Media</string>
    <string name="pref_title_gain_adjustment">Gain Adjustment</string>
    <string name="pref_title_floating_player">Floating Player</string>
    <string name="pref_title_floating_player_permission">Overlay Permission</string>
    <string name="pref_summary_primary_color">The primary theme color for control elements.</string>
    <string name="pref_summary_accent_color">An alternate color used to accent elements.</string>
    <string name="pref_summary_show_album_art">Uses the current song\'s album cover as the lock screen wallpaper.</string>
    <string name="pref_summary_blur_album_art">Blurs the album cover on the lock screen. This can cause problems with third party apps and widgets.</string>
    <string name="pref_summary_classic_notification">Use the classic notification design.</string>
    <string name="pref_summary_colored_notification">"Colors the notification with a vibrant color taken from the album cover."</string>
    <string name="pref_summary_remember_shuffle">Shuffle mode will stay on when selecting a new list of songs for the queue.</string>
    <string name="pref_summary_remember_queue">Save the queue when closing the app so it can persist across sessions.</string>
    <string name="pref_summary_colored_shortcuts">Colors the app shortcuts in the primary color.</string>
    <string name="pref_summary_remember_tab">Go to the last opened tab on launch.</string>
    <string name="pref_summary_categories">Configure visibility and order of display categories.</string>
    <string name="pref_summary_direct_play_codecs">Disable direct play codecs to force transcoding.</string>
    <string name="pref_summary_gain_adjustment">Adjust the gain of the music player\'s output</string>
    <string name="pref_summary_floating_player">Show a small player overlay on top of other apps while music is playing</string>
    <string name="pref_summary_floating_player_permission">Tap to grant the \"Display over other apps\" permission</string>
    <string name="delete_action">Delete</string>
    <string name="remove_action">Remove</string>
    <string name="rename_action">Rename</string>
    <string name="create_action">Create</string>
    <string name="reset_action">Reset</string>
    <string name="last_added">Recent</string>
    <string name="my_top_tracks">Top</string>
    <string name="grid_size_1" translatable="false">1</string>
    <string name="grid_size_2" translatable="false">2</string>
    <string name="grid_size_3" translatable="false">3</string>
    <string name="grid_size_4" translatable="false">4</string>
    <string name="grid_size_5" translatable="false">5</string>
    <string name="grid_size_6" translatable="false">6</string>
    <string name="grid_size_7" translatable="false">7</string>
    <string name="grid_size_8" translatable="false">8</string>
    <string name="support_development">Support Development</string>
    <string name="version">Version</string>
    <string name="source">Source</string>
    <string name="author">Author</string>
    <string name="website">Website</string>
    <string name="follow_on_twitter">Follow on Twitter</string>
    <string name="visit_website">Visit Website</string>
    <string name="report_bugs">Report Bugs</string>
    <string name="report_bugs_summary">Open a new issue for bugs or features.</string>
    <string name="translate">Translate</string>
    <string name="translate_summary">Help translate strings to your native language.</string>
    <string name="rate_on_google_play">Rate</string>
    <string name="rate_on_google_play_summary">Leave a positive rating on Google Play.</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">If you think I deserve to get paid for my work, you can leave me a few dollars here.</string>
    <string name="special_thanks_to">Special Thanks</string>
    <string name="aidan_follestad_summary">Improved theme engine and made some other excellent additions.</string>
    <string name="maarten_corpel_summary">Designed a placeholder image for albums with no cover art.</string>
    <string name="aleksandar_tesic_summary">Made great improvements to the general design.</string>
    <string name="eugene_cheung_summary">Several amazing contributions to the source code.</string>
    <string name="adrian_summary">Designed the new album page which was then ported to other activities.</string>
    <string name="widget_big">Album</string>
    <string name="widget_classic">Classic</string>
    <string name="widget_card">Card</string>
    <string name="select">Select</string>
    <string name="add">Add</string>
</resources>