<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.dkanada.gramophone.views.settings.JellyPreferenceCategory android:title="@string/pref_header_colors">

        <ListPreference
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="dark"
            android:entries="@array/pref_theme_titles"
            android:entryValues="@array/pref_theme_values"
            android:key="general_theme"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_theme" />

        <com.dkanada.gramophone.views.settings.ColorPreference
            app:iconSpaceReserved="false"
            android:defaultValue="@color/color_primary"
            android:key="primary_color"
            android:summary="@string/pref_summary_primary_color"
            android:title="@string/pref_title_primary_color" />

        <com.dkanada.gramophone.views.settings.ColorPreference
            app:iconSpaceReserved="false"
            android:defaultValue="@color/color_accent"
            android:key="accent_color"
            android:summary="@string/pref_summary_accent_color"
            android:title="@string/pref_title_accent_color" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="colored_shortcuts"
            android:summary="@string/pref_summary_colored_shortcuts"
            android:title="@string/pref_title_colored_shortcuts" />

    </com.dkanada.gramophone.views.settings.JellyPreferenceCategory>

    <com.dkanada.gramophone.views.settings.JellyPreferenceCategory android:title="@string/pref_header_overlay">

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="floating_player_enabled"
            android:summary="@string/pref_summary_floating_player"
            android:title="@string/pref_title_floating_player" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="floating_player_permission"
            android:summary="@string/pref_summary_floating_player_permission"
            android:title="@string/pref_title_floating_player_permission" />

    </com.dkanada.gramophone.views.settings.JellyPreferenceCategory>

</androidx.preference.PreferenceScreen>
