<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/floating_player_card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?cardBackgroundColor"
    app:cardCornerRadius="28dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="4dp"
        android:paddingStart="0dp">

        <ImageView
            android:id="@+id/floating_player_image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_album_art"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/floating_player_title"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <ImageButton
            android:id="@+id/floating_player_play_pause"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_play_pause"
            android:scaleType="center"
            android:src="@drawable/ic_play_arrow_white_24dp" />

        <ImageButton
            android:id="@+id/floating_player_next"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_next"
            android:scaleType="center"
            android:src="@drawable/ic_skip_next_white_24dp" />

        <ImageButton
            android:id="@+id/floating_player_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_close"
            android:scaleType="center"
            android:src="@drawable/ic_close_white_24dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
